[package]
authors = ["Travis Baars <travis@trainland.io>"]
description = "File extension types in Rust"
documentation = "https://docs.rs/billios"
edition = "2021"
homepage = "https://github.com/travisbaars/extensions-rs"
license = "MIT"
name = "extensions-rs"
readme = "README.md"
repository = "https://github.com/travisbaars/extensions-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-iterator = "2.0.0"
lazy_static = "1.4.0"
tokio = { version = "1.36.0", features = ["macros", "rt"] }
